补充渔夫对话细节，添加对话按钮