@@ -15,11 +15,12 @@ import net.minecraft.world.inventory.ClickType;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.ItemStack;
 import org.confluence.terraentity.TerraEntity;
-import org.confluence.terraentity.entity.ai.keyframe.animation.KeyframeAnimation;
+import org.confluence.terraentity.api.npc.trade.ITrade;
 import org.confluence.terraentity.api.npc.trade.ITradeHolder;
+import org.confluence.terraentity.entity.ai.keyframe.animation.KeyframeAnimation;
+import org.confluence.terraentity.entity.npc.AnglerNPC;
 import org.confluence.terraentity.menu.TETradesMenu;
 import org.confluence.terraentity.mixed.IPlayer;
-import org.confluence.terraentity.api.npc.trade.ITrade;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
@@ -29,10 +30,10 @@ import java.util.List;
  * <p>渲染cost的逻辑在{@link ITrade#renderCosts(ITradeHolder, GuiGraphics, Font, int, int, int, int, int, int)}
  * <p>使用时必须继承此类，否则会出现类型推断不匹配</p>
  */
-public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractContainerScreen<M> {
+public abstract class TETradeScreen<M extends TETradesMenu> extends AbstractContainerScreen<M> {
+    public static final ResourceLocation MENU_LOCATION = TerraEntity.space("textures/gui/container/npc_shop.png");
     private static final ResourceLocation SCROLLER_SPRITE = ResourceLocation.withDefaultNamespace("container/villager/scroller");
     private static final ResourceLocation SCROLLER_DISABLED_SPRITE = ResourceLocation.withDefaultNamespace("container/villager/scroller_disabled");
-    public static final ResourceLocation MENU_LOCATION = TerraEntity.space("textures/gui/container/npc_shop.png");
     private static final int NUMBER_OF_LINES = 7;
     private static final Component TRADES_LABEL = Component.translatable("title.terra_entity.npc_trade");
 
@@ -67,7 +68,6 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
         super(menu, playerInventory, title);
         this.imageWidth = 290;
         this.inventoryLabelX = 107;
-
     }
 
     @Override
@@ -75,16 +75,14 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
         super.init();
         if (menu.NPCTrades == null) {
             menu.NPCTrades = ((IPlayer) Minecraft.getInstance().player).terra_entity$getTradeHolder();
-
         }
         boolean trade = menu.NPCTrades != null && menu.NPCTrades.getTradeManager() != null;
-        if(triggerOnce) {
-            // 如果没有对话，则不显示对话框
-//            if(((IPlayer) Minecraft.getInstance().player).terra_entity$getInteractingEntity() instanceof AbstractTerraNPC npc){
-//                if(NPCDialogs.getDialog_map().get(BuiltInRegistries.ENTITY_TYPE.getKey(npc.getType())) != null) {
-            Minecraft.getInstance().setScreen(new DialogScreen(Component.literal("123"), this, trade && !menu.NPCTrades.trades().isEmpty()));
-//                }
-//            }
+        if (triggerOnce) {
+            if (menu.NPCTrades instanceof AnglerNPC) {
+                Minecraft.getInstance().setScreen(new AnglerDialogScreen(this, (byte) 0));
+            } else {
+                Minecraft.getInstance().setScreen(new DialogScreen(this, trade && !menu.NPCTrades.trades().isEmpty()));
+            }
             triggerOnce = false;
         }
         if (!trade) return;
@@ -102,44 +100,37 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
                 .addKeyframe(30, 55)
                 .addKeyframe(40, 60)
                 .build();
-
-
-
     }
 
     @Override
     protected void renderLabels(GuiGraphics guiGraphics, int mouseX, int mouseY) {
-
-        guiGraphics.setColor(1, 1, 1, (float)(v / 60f));
-        int fy = 6 - (int)((60 - v) / 5);
+        guiGraphics.setColor(1, 1, 1, (float) (v / 60f));
+        int fy = 6 - (int) ((60 - v) / 5);
 
         Component label = this.title;
         ITradeHolder holder = ((IPlayer) Minecraft.getInstance().player).terra_entity$getTradeHolder();
-        if(holder != null) {
-            if(shopItem >= 0 && shopItem < holder.trades().size()) {
+        if (holder != null) {
+            if (shopItem >= 0 && shopItem < holder.trades().size()) {
                 label = holder.trades().get(shopItem).getTitle(holder, label);
             }
         }
-        if(label == title){
-            guiGraphics.drawString(this.font, ((MutableComponent)this.title).withStyle(Style.EMPTY.withBold(true)), 49 + this.imageWidth / 2 - this.font.width(this.title) / 2, fy, 0x348834, false);
-        }else{
+        if (label == title) {
+            guiGraphics.drawString(this.font, ((MutableComponent) this.title).withStyle(Style.EMPTY.withBold(true)), 49 + this.imageWidth / 2 - this.font.width(this.title) / 2, fy, 0x348834, false);
+        } else {
             guiGraphics.drawString(this.font, label, 49 + this.imageWidth / 2 - this.font.width(label) / 2, fy, 0x348834, false);
         }
 
         guiGraphics.setColor(1, 1, 1, 1);
 
-
-        guiGraphics.drawString(this.font, this.playerInventoryTitle,90 + this.imageWidth / 2, this.inventoryLabelY, 4210752, false);
-        var interAct = ((IPlayer)minecraft.player).terra_entity$getTradeHolder();
+        guiGraphics.drawString(this.font, this.playerInventoryTitle, 90 + this.imageWidth / 2, this.inventoryLabelY, 4210752, false);
+        var interAct = ((IPlayer) minecraft.player).terra_entity$getTradeHolder();
         Entity interactEntity = null;
-        if(interAct instanceof Entity e){
+        if (interAct instanceof Entity e) {
             interactEntity = e;
         }
-        Component title = interactEntity == null || interactEntity.getDisplayName() == null? TRADES_LABEL : interactEntity.getDisplayName();
+        Component title = interactEntity == null || interactEntity.getDisplayName() == null ? TRADES_LABEL : interactEntity.getDisplayName();
 
         int l = this.font.width(title);
-
-
         guiGraphics.drawString(this.font, title, 5 - l / 2 + 48, 6, 4210752, false);
     }
 
@@ -151,16 +142,14 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
     protected void renderBg(GuiGraphics guiGraphics, float partialTick, int mouseX, int mouseY) {
         int i = (this.width - this.imageWidth) / 2;
         int j = (this.height - this.imageHeight) / 2;
-        guiGraphics.blit(MENU_LOCATION, i, j, 0, 0.0F, 0.0F, this.imageWidth-15, this.imageHeight, 512, 256);
+        guiGraphics.blit(MENU_LOCATION, i, j, 0, 0.0F, 0.0F, this.imageWidth - 15, this.imageHeight, 512, 256);
     }
 
     private void renderScroller(GuiGraphics guiGraphics, int posX, int posY) {
-
         int i = menu.NPCTrades.trades().size() - 7;
         if (i > 1) {
             int j = 139 - (27 + (i - 1) * 139 / i);
             int k = 1 + j / i + 139 / i;
-            int l = 113;
             int i1 = Math.min(113, this.scrollOff * k);
             if (this.scrollOff == i - 1) {
                 i1 = 113;
@@ -173,26 +162,25 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
 
     @Override
     protected void containerTick() {
-
         this.tickCount++;
     }
 
 
     @Override
     public void render(@NotNull GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTick) {
-        if (menu.NPCTrades == null || menu.NPCTrades.getTradeManager() == null ||menu.NPCTrades.trades() == null){
+        if (menu.NPCTrades == null || menu.NPCTrades.getTradeManager() == null || menu.NPCTrades.trades() == null) {
             this.onClose();
             return;
         }
-        if(isClicked){
-            if(clickCount < 2){
-                if(lastClickTime + 500 < System.currentTimeMillis()){
+        if (isClicked) {
+            if (clickCount < 2) {
+                if (lastClickTime + 500 < System.currentTimeMillis()) {
                     clickCount++;
                     lastClickTime = System.currentTimeMillis();
                 }
-            }else{
-                double itnl = Math.max(Math.exp(-(clickCount) /20.0) * 200, 30);
-                if(lastClickTime + itnl < System.currentTimeMillis()){
+            } else {
+                double itnl = Math.max(Math.exp(-(clickCount) / 20.0) * 200, 30);
+                if (lastClickTime + itnl < System.currentTimeMillis()) {
                     clickCount++;
 //                    Minecraft.getInstance().getSoundManager().play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK.value(), 1F,0.03f));
 
@@ -202,10 +190,10 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
             }
         }
 
-        if(interpolator == null) return;
+        if (interpolator == null) return;
         ITradeHolder holder = ((IPlayer) Minecraft.getInstance().player).terra_entity$getTradeHolder();
 
-        if(holder != null){
+        if (holder != null) {
             menu.NPCTrades = holder;
         }
         this.row = menu.NPCTrades.trades().size() / 3;
@@ -222,16 +210,16 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
         this.renderScroller(guiGraphics, ii, jj);
 
         // 左侧物品
-        if(this.hoveredItem >= 0 && this.hoveredItem < menu.NPCTrades.trades().size()){
+        if (this.hoveredItem >= 0 && this.hoveredItem < menu.NPCTrades.trades().size()) {
             int x = offsetX + hoveredItem % col * intervalX;
             int y = offsetY + (hoveredItem / col - scrollOff) * intervalY;
-            renderSlotHighlight(guiGraphics,x ,y, 20);
+            renderSlotHighlight(guiGraphics, x, y, 20);
         }
         // 左侧物品
-        if(this.shopItem >= 0 && this.shopItem < menu.NPCTrades.trades().size()){
+        if (this.shopItem >= 0 && this.shopItem < menu.NPCTrades.trades().size()) {
             int x = offsetX + shopItem % col * intervalX;
-            int y = offsetY + (shopItem / col- scrollOff) * intervalY;
-            renderSlotHighlight(guiGraphics,x ,y , 20);
+            int y = offsetY + (shopItem / col - scrollOff) * intervalY;
+            renderSlotHighlight(guiGraphics, x, y, 20);
         }
         List<ITrade> trades = menu.NPCTrades.trades();
 
@@ -241,20 +229,20 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
         int ycache = y;
         int cacheIndex = -1;
         for (int l = 0; l < Math.min(row, NUMBER_OF_LINES); l++) {
-            for(int k = 0; k < col; k++){
-                int index = k+(l+ scrollOff) * col;
-                if(index >= trades.size()) break;
+            for (int k = 0; k < col; k++) {
+                int index = k + (l + scrollOff) * col;
+                if (index >= trades.size()) break;
                 var trade = trades.get(index);
 
                 // 渲染获得的物品
                 renderResult(holder, guiGraphics, font, x, y, ii, jj, mouseX, mouseY, trade, index);
-                if(mouseX > x && mouseX < x+16 && mouseY > y && mouseY < y+16){
+                if (mouseX > x && mouseX < x + 16 && mouseY > y && mouseY < y + 16) {
                     xcache = x;
                     ycache = y;
                     cacheIndex = index;
                 }
 
-                x+=intervalX;
+                x += intervalX;
             }
             x = offsetX;
             y += intervalY;
@@ -262,7 +250,7 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
 
         // 如果选择了交易项
         // 渲染上面的材料物品
-        if(shopItem >= 0  &&  shopItem < trades.size()) {
+        if (shopItem >= 0 && shopItem < trades.size()) {
 
             var trade = trades.get(this.shopItem);
             x = ii + 116;
@@ -277,29 +265,29 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
             renderResultSlot(holder, guiGraphics, font, x, y, ii, jj, mouseX, mouseY, trade, canBuy);
 
             // 重新渲染悬浮时物品信息
-            if(cacheIndex != -1){
-                renderResultHover(holder,guiGraphics, font, xcache, ycache, ii, jj, mouseX, mouseY, trades.get(cacheIndex));
+            if (cacheIndex != -1) {
+                renderResultHover(holder, guiGraphics, font, xcache, ycache, ii, jj, mouseX, mouseY, trades.get(cacheIndex));
             }
         }
         this.renderTooltip(guiGraphics, mouseX, mouseY);
 
     }
 
-    protected void renderCosts(ITradeHolder holder, GuiGraphics guiGraphics, Font font, int x, int y, int startx,int starty,int mouseX, int mouseY, ITrade trade){
-        trade.renderCosts(holder,guiGraphics, font, x, y, startx, starty, mouseX, mouseY);
+    protected void renderCosts(ITradeHolder holder, GuiGraphics guiGraphics, Font font, int x, int y, int startx, int starty, int mouseX, int mouseY, ITrade trade) {
+        trade.renderCosts(holder, guiGraphics, font, x, y, startx, starty, mouseX, mouseY);
     }
 
-    protected void renderResult(ITradeHolder holder, GuiGraphics guiGraphics, Font font, int x, int y, int startx,int starty,int mouseX, int mouseY, ITrade trade, int slotIndex){
-        trade.renderResult(holder,guiGraphics, font, x, y, startx, starty, mouseX, mouseY, slotIndex);
-    }
-    protected void renderResultHover(ITradeHolder holder, GuiGraphics guiGraphics, Font font, int x, int y, int startx,int starty,int mouseX, int mouseY, ITrade trade){
-        trade.renderResultHover(holder,guiGraphics, font, x, y, startx, starty, mouseX, mouseY);
+    protected void renderResult(ITradeHolder holder, GuiGraphics guiGraphics, Font font, int x, int y, int startx, int starty, int mouseX, int mouseY, ITrade trade, int slotIndex) {
+        trade.renderResult(holder, guiGraphics, font, x, y, startx, starty, mouseX, mouseY, slotIndex);
     }
 
-    protected void renderResultSlot(ITradeHolder holder, GuiGraphics guiGraphics,Font font, int x, int y, int startx,int starty,int mouseX, int mouseY, ITrade trade, boolean canBuy){
-        trade.renderResultSlot(holder,guiGraphics,font, x, y, startx, starty, mouseX, mouseY, canBuy, menu.slots.getFirst());
+    protected void renderResultHover(ITradeHolder holder, GuiGraphics guiGraphics, Font font, int x, int y, int startx, int starty, int mouseX, int mouseY, ITrade trade) {
+        trade.renderResultHover(holder, guiGraphics, font, x, y, startx, starty, mouseX, mouseY);
     }
 
+    protected void renderResultSlot(ITradeHolder holder, GuiGraphics guiGraphics, Font font, int x, int y, int startx, int starty, int mouseX, int mouseY, ITrade trade, boolean canBuy) {
+        trade.renderResultSlot(holder, guiGraphics, font, x, y, startx, starty, mouseX, mouseY, canBuy, menu.slots.getFirst());
+    }
 
     private boolean canScroll() {
         return row > NUMBER_OF_LINES;
@@ -310,7 +298,7 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
         int i = row;
         if (this.canScroll()) {
             int j = i - NUMBER_OF_LINES;
-            this.scrollOff = Mth.clamp((int)((double)this.scrollOff - scrollY), 0, j);
+            this.scrollOff = Mth.clamp((int) ((double) this.scrollOff - scrollY), 0, j);
         }
         return true;
     }
@@ -325,38 +313,37 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
         int i = (this.width - this.imageWidth) / 2;
         int j = (this.height - this.imageHeight) / 2;
         if (
-                mouseX > (double)(i + 238) && mouseX <= (double)(i + 238 + 16) &&
-                mouseY > (double)(j + 36)&& mouseY <= (double)(j + 36 + 16)
+                mouseX > (double) (i + 238) && mouseX <= (double) (i + 238 + 16) &&
+                        mouseY > (double) (j + 36) && mouseY <= (double) (j + 36 + 16)
         ) {
             this.isClicked = true;
             this.lastClickTime = System.currentTimeMillis();
             return super.mouseClicked(mouseX, mouseY, button);
         }
-        if(canSelect(hoveredItem,mouseX, mouseY, button)) {
+        if (canSelect(hoveredItem, mouseX, mouseY, button)) {
             this.shopItem = hoveredItem;
 
             this.clickCount = button;
             menu.selectedMerchantIndex = shopItem;
             ITradeHolder.setSelectTradeIndex(shopItem);
-            if(shopItem >= 0 ){
+            if (shopItem >= 0) {
                 onClick(mouseX, mouseY, button, shopItem);
             }
-            if (menu.selectedMerchantIndex < 0) menu.slots.get(0).set(ItemStack.EMPTY);
+            if (menu.selectedMerchantIndex < 0) menu.slots.getFirst().set(ItemStack.EMPTY);
         }
         return super.mouseClicked(mouseX, mouseY, button);
     }
 
-    protected boolean canSelect(int index,double mouseX, double mouseY, int button) {
+    protected boolean canSelect(int index, double mouseX, double mouseY, int button) {
         return true;
     }
 
-    protected void onClick(double mouseX, double mouseY, int button, int index){
+    protected void onClick(double mouseX, double mouseY, int button, int index) {
         this.menu.NPCTrades.trades().get(index).onClick(mouseX, mouseY, button, index, this.menu.slots.getFirst());
     }
 
     @Override
     public void mouseMoved(double mouseX, double mouseY) {
-
         int x = (int) (mouseX - offsetX);
         int y = (int) (mouseY - offsetY);
         int i = x / intervalX;
@@ -370,14 +357,13 @@ public abstract class TETradeScreen< M extends TETradesMenu> extends AbstractCon
                 this.hoveredItem = index;
 
             }
-        }else {
+        } else {
             this.hoveredItem = -1;
         }
     }
 
     @Override
     public boolean mouseReleased(double mouseX, double mouseY, int button) {
-
         this.isClicked = false;
         return super.mouseReleased(mouseX, mouseY, button);
     }
